--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "private": true,
   "homepage": "https://shreyas1203-gif.github.io/project",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/core": "^5.0.0-alpha.54",
+    "@mui/icons-material": "^5.4.1",
+    "@mui/material": "^5.4.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
